# jar-runner

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: ConfigReader.h  Confirm.cpp  Confirm.h  Popup.cpp  Popup.h  main.cpp
